--- a/smart_sale/src/assets/css/final.css
+++ b/smart_sale/src/assets/css/final.css
@@ -1821,6 +1821,22 @@ main .paginaProduto_pag {
 } */
 
 /* pagina perfil */
+.form_putimg_perfil{
+    background:linear-gradient(var(--roxo));
+	background-color: var(--roxo);
+	border-radius:25px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+    font-size:17px;
+	padding:14px 27px;
+	text-decoration:none;
+    text-shadow:0px 1px 0px #2f6627;
+    width: 200px;
+    padding-left: 5px;
+}
+
 
 .perfil_pag {
     margin: auto;
