CSS pagina not found revisado

--- a/smart_sale/src/assets/css/final.css
+++ b/smart_sale/src/assets/css/final.css
@@ -2255,6 +2255,7 @@ main .paginaProduto_pag {
     text-align: center;
     align-items: center;
     padding-bottom: 1px;
+    background-color: var(--cinza_claro);
 }
 
 .not_found .container1 {
